--- a/index.css
+++ b/index.css
@@ -120,7 +120,7 @@
 
 
         .section-3-right > div{
-           background-image: url(images/section-4-right-side-background-2.svg);
+           background-image: url("https://assets.website-files.com/60819f9be381394642b5659e/6081b42dfc784618c92acce7_leadiq-activities-background-2.svg");
            background-repeat: no-repeat;
            background-position:  top right;
         }
@@ -636,8 +636,8 @@ display: flex;
 justify-content:flex-end;
 align-items: center;
 padding: 20px 0px;
-max-width: 1224px;
-margin-right: auto;
+/* max-width: 1224px; */
+margin-right: 20px;
 margin-left: auto;
 
 }
@@ -747,8 +747,8 @@ color: #063c4d;
 #section1,.privacy-sec1{
 display: grid;
 grid-template-columns:44% 53%;
-max-width:1224px;
-margin:90px auto;
+/* max-width:1224px; */
+margin:90px 20px;
 gap: 20px;
 }
 .section1-img{
