--- a/CSS folder/index.css
+++ b/CSS folder/index.css
@@ -1,8 +1,8 @@
 /* Main-navbar css */
 .main-navbar {
   background-color: white;
-  position: fixed;
-  top: 40px;
+  position: sticky!important;
+  top: 0px !important;
   left: 0px;
   right: 0px;
   display: flex;
@@ -11,6 +11,7 @@
   align-items: center;
   padding: 20px 10px;
 }
+
 .main-nav-list li {
   padding-bottom: 15px;
 }
@@ -40,6 +41,7 @@
   margin: 0px 10px;
 }
 
+
 .primary-btn-link {
   font-size: 16px;
   text-decoration: none;
@@ -50,6 +52,8 @@
 .main-navbar ul {
   display: flex;
 }
+
+
 
 /* Css for menu dropdown fuction */
 .submenu {
@@ -217,13 +221,19 @@ a {
 }
 
 .section-2 > div {
-  display: grid;
+  /* display: grid;
   grid-gap: 40px;
-  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); */
   background-color: #fff;
   color: #444;
+  
+  /* min-width: 350px; */
   margin-top: 50px;
-  min-width: 350px;
+  /* min-width: 350px;  */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .box > img {
