--- a/CSS folder/pricing.css
+++ b/CSS folder/pricing.css
@@ -217,6 +217,9 @@ z-index: 1;
     float: right;
     margin-top: 2px;
 }
+.pricing-badge h3{
+    color: white;
+}
 /* ----------Section-2---------- */
 .pricing-sec2{
     display: flex;
@@ -270,7 +273,7 @@ z-index: 1;
         box-shadow: 4px 4px 14px 0 rgb(8 15 52 / 4%);
     
 }
-span{
+.pricing-sec2 span{
     color: #85959a;
     font-size: 16px;
     line-height: 18px;
@@ -386,6 +389,7 @@ box-shadow: 4px 4px 16px 0 rgb(255 210 101 / 16%);
     background-color: rgb(244,251,252);
     margin-top: 130px;
     padding: 30px;
+    padding-bottom: 130px;
 }
 .p-sec4-head{
     text-align: center;
@@ -479,6 +483,27 @@ width: 170px;
 
 }
 
+.ptp,.pth{
+    text-align: center;
+    
+}
+.pth{
+    margin-top: 8px;
+    font-size: 38px;
+}
+.ptp{
+    margin-top: 70px;
+    color: rgb(0,213,134);
+    font-weight: 500;
+    letter-spacing: 0.08em;
+    text-transform: uppercase;
+
+}
+.pth+.sec4-card1{
+margin-top: 50px;
+}
+
+
 
 .price-checkbox{
     padding: 35px 20px;
@@ -507,4 +532,126 @@ width: 170px;
     position: relative;
     top: 1000px;
    
+}
+.indianrsdiv{
+    display: grid;
+    display: grid;
+    padding-right: 150px;
+    padding-left: 35px;
+    grid-column-gap: 0px; 
+    grid-template-columns: 1.65fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+ border-style: solid;
+          border-width: 1px;
+          border-color: #dae2e3;
+          border-bottom-right-radius: 26px;
+          border-bottom-left-radius: 26px;
+
+          background-color: #fff;
+          box-shadow: 4px 4px 14px 0 rgb(8 15 52 / 4%);
+}
+
+/* --------from get started part---- */
+/* section-4 */
+#section-4-get-started{
+    /* border: 1px solid black; */
+    height: 200px;
+    width: 800px;
+    margin: auto;
+    margin-top: 100px;
+   
+}
+#section-4-get-started > div{
+    width: 890px;
+    /* border: 1px solid black; */
+    width: 200px;
+    margin: auto;
+    
+   
+}
+#section-4-get-started > div > div:nth-child(1){
+    text-align: center;
+    /* border: 1px solid black; */
+    width: 100px;
+   margin-top:0;
+   /* margin-bottom: 100px; */
+}
+#section-4-get-started >h1{
+    text-align: center;
+    font-size: 45px;
+     color: #063c4d;
+     width: 400px;
+     /* border: 1px solid black; */
+     margin: auto;
+     margin-top: 50px;
+}
+
+/* section-5 */
+#section-5{
+    width: 1220px;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+  
+}
+#section-5 > div{
+    max-width: 30%;
+    margin: 1%;
+    padding: 60px 20px 20px 30px;
+    border: 1px solid rgb(216, 215, 215);
+    border-radius: 20px;
+    cursor: pointer;
+    /* border: 1px solid black; */
+}
+
+#section-5 > div:hover{
+    margin-top: -0.5%;
+    transition: top 0.2 ease;
+    position: relative;
+    
+}
+#section-5 > div >p{
+    line-height: 30px;
+     color: #576f76;
+     font-size: 20px;
+     font-weight: 500;
+     font-family: "Circular Std",sans-serif,;
+    
+}
+.card{
+    padding: 50px 40px 55px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #dae2e3;
+    border-radius: 26px;
+    background-color: #fff;
+    box-shadow: 4px 4px 14px 0 rgb(8 15 52 / 4%);
+}
+
+strong{
+     color: #063c4d;
+     font-size: 20px;
+}
+#section-5 > div > div{
+    display: flex;
+    margin-top: 50px;
+}
+#section-5 > div > div> img{
+    width: 20%;
+}
+#section-5 >div >div > div{
+    margin-top: 10px;
+    margin-left: 10px;
+}
+.text-span{
+    color:#31ded4; ;
+}
+.user-name{
+     color: #063c4d;
+     font-size: 20px;
+}
+.user-post{
+    color: #576f76;
+    opacity: 0.7;
+    font-weight: 600;
 }
