--- a/CSS folder/privacy.css
+++ b/CSS folder/privacy.css
@@ -12,8 +12,8 @@
   }
   .main-navbar {
     background-color: white;
-    position: fixed;
-    top: 40px;
+    position: sticky;
+    top: 0px;
     margin-left: 0px;
     right: 0px;
     display: flex;
