--- a/CSS folder/index.css
+++ b/CSS folder/index.css
@@ -871,9 +871,9 @@ width: 90%;
 }
 
 .section-8 > div > img {
-  /* width: 120px;
-  height: 120px; */
-  padding: 15px 20px;
+  width: 120px;
+  height: 120px;
+  padding: 15px;
   border-radius: 60px;
   background-color: #dcf8ee;
   margin-bottom: 30px;
