--- a/CSS folder/privacy.css
+++ b/CSS folder/privacy.css
@@ -1,4 +1,4 @@
-.pri-sec1-content P {
+/* .pri-sec1-content P {
     color: #576f76;
     font-size: 20px;
     line-height: 38px;
@@ -137,7 +137,7 @@
   
   .login-link {
     color: black;
-  }
+  } */
   * {
     margin: 0;
     padding: 0;
@@ -155,6 +155,9 @@
   }
   
   /* CSS for privacy-sec2 */
+ .pri-sec1-img img{
+max-width: 100%;
+ }
   
   #pri-sec2 {
     background-color: rgb(244, 251, 252);
@@ -271,4 +274,135 @@
     width: 170px;
     background-color: white;
     box-shadow: 4px 4px 16px 0 rgba(0, 0, 0, 0.055);
+  }
+
+  .privacy-sec1 {
+    margin-top: 30px;
+    grid-template-columns: 40% 56%;
+    gap: 50px;
+    margin-bottom: 0x;
+  }
+  
+  .pri-sec1-img {
+    margin-top: -20px;
+  }
+  
+  .pri-sec1-buttons {
+    display: flex;
+    margin-top: 40px;
+  }
+  
+  .center-btn,
+  .resource-btn {
+    padding: 20px 40px;
+    border-radius: 100px;
+    margin-right: 28px;
+    text-align: center;
+  }
+  .resource-btn,
+  .white-btn {
+    width: 170px;
+    background-color: white;
+    box-shadow: 4px 4px 16px 0 rgba(0, 0, 0, 0.055);
+  }
+  
+  
+  /* ---------MEDIA QUERIES FOR TABLET------- */
+  @media screen and (max-width:980px){
+    
+    #section1,.section5,.section-3>div,#section-4 > div > div,#section-4-box,.section-7,.privacy-sec1{
+    grid-template-columns:1fr;
+  
+    }
+    .section1-content h1,.pri-sec1-content h1{
+      margin-top: 0;
+    }
+    .section1-img img,.pri-sec1-img{
+    margin-left: 0;
+    }
+    
+    .section5-content > h1{
+      width: 70%;
+      padding-top: 70px;
+    }
+    .section6 img{
+      max-width: 100%;
+    }
+    .section-2>div{
+      grid-template-columns: repeat(3,1fr);
+    margin-left: 9%;
+  
+    }
+    .section-3Bg-top img,.section-3Bg-down img{
+      display: none;
+    }
+    .section-3-left{
+      margin: 0;
+    }
+    .section-3 > h1{
+      margin-top: 10px;
+      width: 100%;
+      padding-top: 70px;
+    }
+    .section-3-left > h3 {
+     
+      margin: 40px 10px;
+    }
+    .section-3-left > div{
+      margin: 0;
+    }
+    .section-7BgDown > img,.section-7-BgTop > img{
+      display: none;
+    }
+    .section-7RightPart{
+      margin-top: 0;
+      padding-bottom: 30px;
+      height: 100%;
+      width: 90%;
+    }
+    .section-8 {
+      grid-template-columns: repeat(2,1fr);
+    }
+    .section-8Heading{
+      width: 100%;
+    }
+    .section-10{
+      flex-direction: column;
+      }
+      .section-10 ~ hr{
+        margin-top: 20px;
+      }
+      .section-10 img{
+        margin: 10px;
+      }
+  
+      .main-navbar+hr+ul{
+        height: 100vh;
+        display: none;
+      }
+      li a{
+        font-weight: normal !important;
+        color: black;
+      }
+      li{
+        padding-bottom: 21px !important;
+      }
+      ul>.primary-btn{
+        width: 90%;
+        margin: auto;
+        margin-top: 20px;
+        
+      }
+      li img{
+        height: 10px;
+      }
+      .main-navbar .primary-btn,.main-navbar ul,.top-navbar,#ham-list {
+      display: none;
+      }
+      .ham-menu{
+        display: block;
+      }
+      .main-navbar+hr+ul,.main-navbar+hr{
+        display: block;
+      }
   }
