--- a/CSS folder/index.css
+++ b/CSS folder/index.css
@@ -927,7 +927,7 @@ width: 90%;
   margin: auto;
   justify-content: center;
   flex-wrap: wrap;
-  padding-bottom: 30px;
+  padding-bottom: 30px !important;
 }
 
 .section-9DownPart > img {
